Added protected routes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APPWRITE_ENDPOINT=
-APPWRITE_PROJECT_ID=
-APPWRITE_DB_ID=
-APPWRITE_COL_TASKS_ID=
+EXPO_PUBLIC_APPWRITE_ENDPOINT=
+EXPO_PUBLIC_APPWRITE_ENDPOINT=
+EXPO_PUBLIC_APPWRITE_ENDPOINT=
+EXPO_PUBLIC_APPWRITE_ENDPOINT=
