--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "dependencies": {
     "@expo/config-plugins": "^9.0.14",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.35",
-    "expo-blur": "~14.0.3",
+    "expo": "~52.0.25",
+    "expo-blur": "~14.0.2",
     "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
