--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-calendars": "^1.1309.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-popover-view": "^6.1.0",
     "react-native-reanimated": "~3.16.1",
@@ -59,6 +60,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
+    "sass": "^1.85.0",
     "typescript": "^5.3.3"
   },
   "private": true
