--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -17,12 +17,11 @@
   "dependencies": {
     "@expo/config-plugins": "^9.0.14",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "appwrite": "^17.0.0",
-    "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
     "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.4",
@@ -41,6 +40,7 @@
     "react-native-appwrite": "^0.6.0",
     "react-native-calendars": "^1.1309.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker": "^4.3.7",
@@ -56,9 +56,11 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
+    "expo": "^52.0.37",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "~52.0.5",
     "react-test-renderer": "18.3.1",
     "sass": "^1.85.0",
     "typescript": "^5.3.3"
